# unitconvert

./: .gitignore  .readthedocs.yaml  AstroToSympy.ipynb  Elegant.ipynb  LICENSE  README.md  setup.cfg
.github/workflows/: test.yml
Package_0.1.1/: LICENSE  README.md  setup.cfg
Package_0.1.1/src/unitconvert/: naturalunits.py
Package_0.1.1/src/unitconvert_pkg.egg-info/: PKG-INFO
Package_0.1.3/: setup.cfg
Package_0.1.3/src/unitconvert_pkg.egg-info/: PKG-INFO  SOURCES.txt
Package_0.1.4/: setup.cfg
Package_0.2.0/: README.md  setup.cfg
Package_0.2.0/src/unitconvert/: gaussian.py  geometrized.py  getdimensions.py  natural.py  setup.cfg
Package_0.2.0/src/unitconvert/src/unitconvert/: geometrized.py  getdimensions.py  natural.py
Package_0.2.0/src/unitconvert_pkg.egg-info/: PKG-INFO  SOURCES.txt
Package_0.2.1/: README.md  setup.cfg
Package_0.2.1/src/unitconvert/: gaussian.py  natural.py
Package_0.2.1/src/unitconvert_pkg.egg-info/: PKG-INFO
Package_0.2.2/: README.md  setup.cfg
Package_0.2.2/src/unitconvert/: geometrized.py  getdimensions.py  natural.py  planck.py
Package_0.2.2/src/unitconvert_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  custom.rst  gadget.rst  gaussian.rst  geometrized.rst  index.rst  natural.rst  planck.rst  requirements.txt  unitsystem.rst
src/unitconvert/: custom.py  defaults.py  gadget.py  gaussian.py  geometrized.py  getdimensions.py  natural.py  planck.py  unitsystem.py
src/unitconvert_pkg.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_custom.py  test_defined.py
unitconvert/: naturalunits.py
