[metadata]
name = UnitConvert
version = 1.2.0
author = Sabarish
author_email = sabarish.science@gmail.com
url = https://github.com/sabarish-vm/unitconvert
description = 'A package that will convert the given units to narutal units and vice versa'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
install_requires =
        numpy>=2.0.0
        astropy>=6.0.0
python_requires = >=3.10
[options.packages.find]
where = src

