[metadata]
name = unitconvert-pkg
version = 0.2.0
author = Sabarish
author_email = sabarish.science@gmail.com
url = https://github.com/Sabb95/unitconvert
description = 'A package that will convert the given units to narutal units and vice versa'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = astropy
[options.packages.find]
where = src
